<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_warehouse_name_required"
            android:inputType="textCapWords"
            android:maxLength="100" />

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_warehouse_code_required"
            android:inputType="textCapCharacters"
            android:maxLength="30" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_location"
            android:inputType="textCapWords" />

        <CheckBox
            android:id="@+id/cbActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:checked="true"
            android:text="@string/label_active" />

        <CheckBox
            android:id="@+id/cbDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warehouse_set_default" />

    </LinearLayout>

</ScrollView>
